# klinger

./: README.md
01_processes/: aba.cpp  charout.cpp  meson.build
02_threads/: meson.build
02_threads/.cache/clangd/index/: main.cpp.47765127D6012E06.idx
02_threads/src/: main.cpp
03_sync1/: meson.build
03_sync1/.cache/clangd/index/: account.cpp.FAD8242581913401.idx  main.cpp.5FE2CB8C88609DD0.idx
03_sync1/include/: account.h 
03_sync1/src/: account.cpp  main.cpp
04_sync2/: meson.build  meson.build 
04_sync2/.cache/clangd/index/: CLI11.hpp.1E4CB06285024B09.idx  loadsim.cpp.46BBA388210E9D4F.idx  work_packet.h.CAF2E56484AB97B1.idx  work_queue.cpp.9C009860CDB9C35A.idx  work_queue.h.A1888D284C15A206.idx
04_sync2/build /include/: work_packet.h
04_sync2/include/: work_queue.h
04_sync2/src/: loadsim.cpp  work_queue.cpp
05_sync3/: meson.build
05_sync3/.cache/clangd/index/: Philosopher.cpp.397749EBFF438B74.idx  main.cpp.B672224801F5225B.idx
05_sync3/include/: philosopher.h  semaphore.h  utils.h
05_sync3/src/: Philosopher.cpp  main.cpp  semaphor.cpp
06_future/: meson.build
06_future/.cache/clangd/index/: CLI11.hpp.7564D7C7F28CCC13.idx  InfInt.h.7CF9100577D19EF3.idx  calc_factors.h.D949C8C6C300C6BC.idx  main.cpp.D4CDF6AEF1571BFD.idx
06_future/include/: InfInt.h  calc_factors.h
06_future/src/: main.cpp
07_berkley/: meson.build
07_berkley/.cache/clangd/index/: clock.h.85563611C376019E.idx  (+8 more)
07_berkley/include/: TimeMaster.h  TimeSlave.h  channel.h  clock.h  pipe.h  timeutils.h
07_berkley/src/: clock.cpp  main.cpp  timemaster.cpp  timeslave.cpp
